--- a/README
+++ b/README
@@ -1,5 +1,4 @@
 # poke327
 
-## [1.01] - Terrain Generation
-This version of poke327 implements simple terrain generation.
-
+# [1.03] - Path Finding
+This version of poke327 generates a distance map from the player character
