more credit to sheaffer for heap

--- a/green_tyler.assignment-1.03/CHANGELOG
+++ b/green_tyler.assignment-1.03/CHANGELOG
@@ -33,7 +33,7 @@
 ## [1.03]
 ### Added
  - 2022-09-16
-  - implemented sheaffer's code for map generation
+  - implemented sheaffer's code for map generation and heap
  - 2022-09-17
   - cost map for hiker and rival to world struct
   - function for calculating map movement cost for different trainer types
