--- a/green_tyler.assignment-1.04/README
+++ b/green_tyler.assignment-1.04/README
@@ -1,4 +1,4 @@
 # poke327
 
-## [1.03] - Path Finding
-This version of poke327 generates a distance map from the player character
+## [1.04] - Player Character and Trainers
+This version implements the PC and trainers movement
