--- a/green_tyler.assignment-1.04/README
+++ b/green_tyler.assignment-1.04/README
@@ -1,4 +1,5 @@
 # poke327
 
 ## [1.04] - Player Character and Trainers
-This version implements the PC and trainers movement.
+This version implements the trainers movement.
+
