added fly command

--- a/green_tyler.assignment-1.06/CHANGELOG
+++ b/green_tyler.assignment-1.06/CHANGELOG
@@ -73,5 +73,7 @@
   - added class for trainer
   - added class for world
   - refactored old code for cpp
+  - added fly command
+  - added player movement between maps
 ### Updated
  - 2022-10-20
