added starter pokemon selection

--- a/green_tyler.assignment-1.09/CHANGELOG
+++ b/green_tyler.assignment-1.09/CHANGELOG
@@ -3,6 +3,7 @@
 ## [1.09]
 ### Added
  - 2022-11-10
+  - starter pokemon select
   - wild pokemon battles
   - trainer battles
   - pokecenter interface
